--- a/src/app/components/admin/users/users.component.html
+++ b/src/app/components/admin/users/users.component.html
@@ -94,46 +94,69 @@
         </tr>
       </thead>
       <tbody>
-          <tr>
+        <tr>
             <td>Név:</td>
             <td>{{selectedUser.name}}</td>
         </tr>
         <tr>
-          <td>E-mail:</td>
-          <td>{{selectedUser.email}}</td>
-      </tr>
-      <tr>
-        <td>Telefonszám:</td>
-        <td>{{selectedUser.phone}}</td>
-    </tr>
-    <tr>
-      <td>Cím::</td>
-      <td>{{selectedUser.address}}</td>
-    </tr>
-    <tr>
-      <td>Regisztráció dátuma:</td>
-      <td>{{selectedUser.reg}}</td>
-    </tr>
-    <tr>
-      <td>Utolsó belépés dátuma: </td>
-      <td>{{selectedUser.last}}</td>
-    </tr>
-    <tr>
-      <td>Jogosultság:</td>
-      <td>{{selectedUser.role}}</td>
-    </tr>
-    <tr>
-      <td>Státusz:</td>
-      <td>{{selectedUser.status? "Aktív" : "Inaktív"}}</td>
-    </tr>
+            <td>E-mail:</td>
+            <td>{{selectedUser.email}}</td>
+        </tr>
+        <tr>
+            <td>Telefonszám:</td>
+            <td>{{selectedUser.phone}}</td>
+        </tr>
+        <tr>
+            <td>Cím::</td>
+            <td>{{selectedUser.address}}</td>
+        </tr>
+        <tr>
+            <td>Regisztráció dátuma:</td>
+            <td>{{selectedUser.reg}}</td>
+        </tr>
+        <tr>
+            <td>Utolsó belépés dátuma: </td>
+            <td>{{selectedUser.last}}</td>
+        </tr>
+        <tr>
+          <td>Jogosultság:</td>
+          <td>{{selectedUser.role}}</td>
+        </tr>
+        <tr>
+          <td>Státusz:</td>
+          <td>{{selectedUser.status? "Aktív" : "Inaktív"}}</td>
+        </tr>
       </tbody>
-      
+    </table>
+  </div>
+  <div class="tab-pane fade" id="orders-tab-pane" role="tabpanel" aria-labelledby="orders-tab" tabindex="0">
+
+    <table class="table table-hover table-striped">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th class="text-center">Összeg</th>
+          <th class="text-center">Státusz</th>
+          <th class="text-center">További információk</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let order of orders; let i = index;">
+          <td>{{i+1}}.</td>
+          <td class="text-center">{{order.total | numberFormat}}Ft </td>
+          <td class="text-center">{{order.status}}</td>
+          <td class="text-center"><button class="btn btn-secondary btn-sm me-2" title="Infó" (click)="OrderInfo(order.id)"><i class="bi bi-info-lg"></i></button></td>
+        </tr>
+      </tbody>
       <tfoot>
-    
+        <tr>
+        <td colspan="4" class="text-center">Eddigi rendelések <strong>{{orders.length}}</strong></td>
+      </tr>
       </tfoot>
     </table>
-            
-          </div>
+  </div>
+</div>
+
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" (click)="cancel()">
               <i class="bi bi-x-circle"></i>&nbsp;&nbsp;Vissza
@@ -143,23 +166,7 @@
       </div>
     </div>
 
-  </div>
-  <div class="tab-pane fade" id="orders-tab-pane" role="tabpanel" aria-labelledby="orders-tab" tabindex="0">
-
-    <table class="table table-hover table-striped">
-      <thead>
-        <tr></tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let order of orders; let i = index;">
-          <td>{{i+1}}.</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr></tr>
-      </tfoot>
-    </table>
-  </div>
+  
 
 </div>
 
@@ -180,10 +187,50 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          <i class="bi bi-x-circle"></i>&nbsp;&nbsp;Mégem
+          <i class="bi bi-x-circle"></i>&nbsp;&nbsp;Mégsem
         </button>
         <button type="button" class="btn btn-success" (click)="suspend(user.id)">
           <i class="bi bi-check-lg"></i>&nbsp;&nbsp;Igen
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal modal-xxl fade" id="infoModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+  aria-labelledby="infoModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="infoModalLabel">Rendelés infó</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+       <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Rendelés azonosítója</th>
+            <th>Tétel</th>
+            <th>Mennyiség</th>
+            <th>Összeg</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of order_items; let i = index">
+            <td>{{i+1}}</td>
+            <td class="text-center">{{item.order_id}}</td>
+            <td>{{pizzas[item.pizza_id - 1].name}}</td>
+            <td>{{item.quantity}} db</td>
+            <td> {{item.price * item.quantity | numberFormat}}  Ft</td>
+          </tr>
+        </tbody>
+        
+       </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          <i class="bi bi-x-circle"></i>&nbsp;&nbsp;Vssza
         </button>
       </div>
     </div>
